# ai-conversation-search

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  lefthook.yml  pyproject.toml  rustfmt.toml
.claude-plugin/: INSTALL.md  README.md  marketplace.json  plugin.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
.github/workflows-archive/: publish.yml
data/: schema.sql
plugin/.claude-plugin/: plugin.json
plugin/skills/conversation-search/: REFERENCE.md
scripts/: bump-version.sh
skills/conversation-search/: REFERENCE.md  SKILL.md
src/: cli.rs  date_utils.rs  db.rs  error.rs  git_utils.rs  main.rs  schema.rs  search.rs  summarization.rs
src/conversation_search/: cli.py
src/conversation_search/core/: codex_indexer.py  db.py  git_utils.py  indexer.py  opencode_indexer.py  search.py  summarization.py
src/conversation_search/data/: schema.sql
src/indexer/: claude_code.rs  codex.rs  mod.rs  opencode.rs
tests/: test_codex_indexer.py  test_date_filtering.py  test_full_content_search.py  test_opencode_indexer.py  test_pick.sh  test_repo_root.py  test_search_pair_detection.py
tests/skill-discovery/: README.md  scenarios.md
