[package]
name = "ai-conversation-search"
version = "0.9.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
regex = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
