[project]
name = "cc-conversation-search"
version = "0.5.1"
description = "Find and resume Claude Code conversations using smart hybrid extraction and JIT indexing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    {name = "akatz-ai", email = "katzfeyalex+akatzgh@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
cc-conversation-search = "conversation_search.cli:main"

[project.urls]
Homepage = "https://github.com/akatz-ai/cc-conversation-search"
Issues = "https://github.com/akatz-ai/cc-conversation-search/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_search"]

[tool.hatch.build.targets.wheel.force-include]
"src/conversation_search/data/schema.sql" = "conversation_search/data/schema.sql"
